mudando titulo e textos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rafa Doces</title>
+  <title>coversa pelo js</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <h1>Digite seus dados e inicie uma conversa via Whatssap</h1>
   </header>
   <main>
-    <h2>Faça seu pedido</h2>
+    <h2>Forneça seus dados (= </h2>
     <form id="formularioContato">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" required>
